--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                             <span class="contact-icon"><img src="assets/icons/icon-facebook.svg" alt="Facebook icon" /></span>
                             <span>Facebook Page</span>
                         </a>
-                        <a class="contact-pill-link contact-pill-website" href="https://greatestmk.github.io/Mei-trading/" target="_blank" rel="noopener">
+                        <a class="contact-pill-link contact-pill-website" href="https://greatestmk.github.io/Mei-Trading/" target="_blank" rel="noopener">
                             <span class="contact-icon"><img src="assets/icons/icon-website.svg" alt="Website icon" /></span>
                             <span>Visit Website</span>
                         </a>
